--- a/styles/styles.css
+++ b/styles/styles.css
@@ -1,8 +1,58 @@
 /* sered styles */
 
+* {
+   margin: 0;
+   padding: 0;
+   box-sizing: border-box;
+}
 
-body .open-sans{
+.open-sans{
   font-family: "Open Sans", sans-serif;
   font-optical-sizing: auto;
   font-style: normal;
 }
+
+.btn{
+    background-color: #469165;
+    border: none;
+    border-radius: 4px;
+    padding: 12px 16px;
+    font-size: 16px;
+    font-weight: 600;
+    color: white;
+    cursor: pointer;
+
+}
+
+
+/* main-style */
+header {
+    background-color: aquamarine;
+    padding: 16px;
+}
+nav{
+    width: 84%;
+    max-width: 1277px;
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+    border: 2px solid red;
+    margin: 0 auto;
+    align-items: center;
+}
+nav .manu{
+    display: flex;
+    list-style: none;
+    align-items: center;
+}
+nav .manu a{
+    font-size: 16px;
+    font-weight: 600;
+    color: #000000;
+    text-decoration: none;
+    padding: 32px;
+}
+.manu .h-btn{
+    padding-left: 303px;
+}
+
